--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,47 @@
 
     %sapper.base%
 
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Technozaure World 2021 par Zenika" />
+    <meta
+      itemprop="description"
+      content="La conférence interne dédiée aux consultants Zenika"
+    />
+    <meta
+      itemprop="image"
+      content="https://tz.zenika.com/images/technozaure.png"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://tz.zenika.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Technozaure World 2021 par Zenika" />
+    <meta
+      property="og:description"
+      content="La conférence interne dédiée aux consultants Zenika"
+    />
+    <meta
+      property="og:image"
+      content="https://tz.zenika.com/images/technozaure.png"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@ZenikaIT" />
+    <meta name="twitter:title" content="Technozaure World 2021 par Zenika" />
+    <meta
+      name="twitter:description"
+      content="La conférence interne dédiée aux consultants Zenika"
+    />
+    <meta
+      name="twitter:image"
+      content="https://tz.zenika.com/images/technozaure.png"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="La conférence interne dédiée aux consultants Zenika"
+    />
+
     <link rel="stylesheet" href="global.css" />
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
     <link rel="icon" type="image/png" href="favicon.png" />
