⚡️ set media attribute to screen on stylesheet link

--- a/src/template.html
+++ b/src/template.html
@@ -59,6 +59,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap"
       rel="stylesheet"
+      media="screen"
     />
 
     <!-- Sapper creates a <script> tag containing `src/client.js`
