💬 update description for sharing links

--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
     <meta itemprop="name" content="Technozaure World 2021 par Zenika" />
     <meta
       itemprop="description"
-      content="La conférence interne dédiée aux consultants Zenika"
+      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika : 3 time zones, 80 talks, 15 workshops."
     />
     <meta
       itemprop="image"
@@ -25,7 +25,7 @@
     <meta property="og:title" content="Technozaure World 2021 par Zenika" />
     <meta
       property="og:description"
-      content="La conférence interne dédiée aux consultants Zenika"
+      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika : 3 time zones, 80 talks, 15 workshops."
     />
     <meta
       property="og:image"
@@ -38,7 +38,7 @@
     <meta name="twitter:title" content="Technozaure World 2021 par Zenika" />
     <meta
       name="twitter:description"
-      content="La conférence interne dédiée aux consultants Zenika"
+      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika : 3 time zones, 80 talks, 15 workshops."
     />
     <meta
       name="twitter:image"
@@ -46,7 +46,7 @@
     />
     <meta
       name="twitter:image:alt"
-      content="La conférence interne dédiée aux consultants Zenika"
+      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika : 3 time zones, 80 talks, 15 workshops."
     />
 
     <link rel="stylesheet" href="global.css" />
