💬 update meta description

--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="theme-color" content="#0F0E0E" />
-    <meta name="description" content="Technozaure World 2021 by Zenika." />
+    <meta
+      name="description"
+      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika : 3 time zones, 80 talks, 15 workshops."
+    />
 
     %sapper.base%
 
