:memo: work about TZ Nantes 2021 #2

--- a/src/template.html
+++ b/src/template.html
@@ -6,50 +6,50 @@
     <meta name="theme-color" content="#0F0E0E" />
     <meta
       name="description"
-      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika : 3 time zones, 80 talks, 15 workshops."
+      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika."
     />
 
     %sapper.base%
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Technozaure World 2021 par Zenika" />
+    <meta itemprop="name" content="Technozaure par Zenika" />
     <meta
       itemprop="description"
-      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika : 3 time zones, 80 talks, 15 workshops."
+      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika"
     />
     <meta
       itemprop="image"
-      content="https://tz.zenika.com/images/technozaure.png"
+      content="https://tz-nantes.zenika.com/images/technozaure.png"
     />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://tz.zenika.com/" />
+    <meta property="og:url" content="https://tz-nantes.zenika.com/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Technozaure World 2021 par Zenika" />
+    <meta property="og:title" content="Technozaure par Zenika" />
     <meta
       property="og:description"
-      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika : 3 time zones, 80 talks, 15 workshops."
+      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika"
     />
     <meta
       property="og:image"
-      content="https://tz.zenika.com/images/technozaure.png"
+      content="https://tz-nantes.zenika.com/images/technozaure.png"
     />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@ZenikaIT" />
-    <meta name="twitter:title" content="Technozaure World 2021 par Zenika" />
+    <meta name="twitter:site" content="@ZenikaNantes" />
+    <meta name="twitter:title" content="Technozaure par Zenika" />
     <meta
       name="twitter:description"
-      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika : 3 time zones, 80 talks, 15 workshops."
+      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika"
     />
     <meta
       name="twitter:image"
-      content="https://tz.zenika.com/images/technozaure.png"
+      content="https://tz-nantes.zenika.com/images/technozaure.png"
     />
     <meta
       name="twitter:image:alt"
-      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika : 3 time zones, 80 talks, 15 workshops."
+      content="La conférence interne par (et pour) les collaborateurs et collaboratrices de Zenika"
     />
 
     <link rel="stylesheet" href="global.css" />
